moved twitter to contact section, added instagram, and changed icons to reflect social media

--- a/css/main.css
+++ b/css/main.css
@@ -746,3 +746,11 @@ padding: 9px;
   color: #fff;
   border-bottom: 1px dashed;
 }
+
+.icon-phone:before {
+  content: "\f099";
+}
+
+.icon-user:before {
+  content: "\f16d";
+}
